--- a/New folder/OTTDataService/src/main/resources/application.properties
+++ b/New folder/OTTDataService/src/main/resources/application.properties
@@ -14,8 +14,11 @@ server.port=9192
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rohitgharge2@gmail.com
-spring.mail.password=wjzuelvqqqnhdjgt
+
+#spring.mail.username= username
+#gmail generated password (you will find it in gmail settings)
+#spring.mail.password= password
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
