--- a/New folder/OTTDataService/src/main/resources/application.properties
+++ b/New folder/OTTDataService/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#please change following configuration details as per your DB.
 spring.datasource.url=jdbc:mysql://localhost:3306/school
 spring.datasource.username=root
 spring.datasource.password=12345
@@ -11,13 +12,12 @@ spring.jpa.hibernate.ddl-auto = validate
 #server.servlet.context-path=/api
 server.port=9192
 
+#Use following settings to configure the mailer in your application
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-
+#spring.mail.host=smtp.gmail.com // default name
+#spring.mail.port=587 //default port
 #spring.mail.username= username
-#gmail generated password (you will find it in gmail settings)
-#spring.mail.password= password
+#spring.mail.password= password //Generate it through Gmail settings
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
