third commit(change made to properties file)

--- a/New folder/OTTDataService/src/main/resources/application.properties
+++ b/New folder/OTTDataService/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.port=9192
 
 #spring.mail.host=smtp.gmail.com    //default name
 #spring.mail.port=587               //default port
-#spring.mail.username= username
+#spring.mail.username= username     //gmail address
 #spring.mail.password= password     //Generate it through Gmail settings
 
 spring.mail.properties.mail.smtp.auth=true
